--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Ro BOT web</title>
 </head>
 <body>
-  
+  <h1><a href="index.html"><img class="boticon" src="https://cdn.discordapp.com/attachments/862682228613316629/901273953471987732/7ccc37a9e903dfe5.png"></a></h1>
 </body>
 </html>
