--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Ro BOT web</title>
 </head>
 <body>
-  <h1><a href="index.html"><img class="boticon" src="https://cdn.discordapp.com/avatars/822362213037637652/05cdcee267a67a851af46849ce4f89c7.webp"></a></h1>
+  <h1><a href="index.html"><img class="boticon" src="https://cdn.discordapp.com/avatars/822362213037637652/05cdcee267a67a851af46849ce4f89c7.webp">Ro BOT</a></h1>
 </body>
 </html>
