--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <title>Ro BOT web</title>
 </head>
 <body>
-  <h1><a href="index.html"><img class="boticon" src="https://cdn.discordapp.com/avatars/822362213037637652/05cdcee267a67a851af46849ce4f89c7.webp">Ro BOT</a></h1>
+  <ul>
+	<li><a href="index.html">ホーム</a></li>
+  <li><a href="command.html">コマンド</a></li>
+　<li><a href="news.html">お知らせ</a></li>
+  <li><a href="about.html">その他</a></li>
+	<li><a href="contact.html">お問い合わせ</a></li>
+</ul>
+  <h1><a href="index.html"><img class="boticon" src="https://cdn.discordapp.com/avatars/822362213037637652/05cdcee267a67a851af46849ce4f89c7.webp"></a></h1>
 </body>
 </html>
