--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   <li><a href="about.html">その他</a></li>
 	<li><a href="contact.html">お問い合わせ</a></li>
 </ul>
-  <h1><a href="index.html"><img class="boticon" src="https://cdn.discordapp.com/avatars/822362213037637652/05cdcee267a67a851af46849ce4f89c7.webp"></a></h1>
+<center><h1><br>Ro Bot</h1><center>
 </body>
 </html>
