--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   <li><a href="about.html">その他</a></li>
 	<li><a href="contact.html">お問い合わせ</a></li>
 </ul>
-<center><h1><br>Ro Bot</h1><center>
+<center><h1><br>Ro Bot</h1><p>多機能Botです。</p><center>
 </body>
 </html>
